fixes to ph3
